# MayaBackend

./: .gitignore  Cargo.toml  README.md
src/: controller.rs  main.rs  service.rs
src/CourseModel/: mod.rs
src/CourseSchema/: mod.rs
src/UserModel/: mod.rs
