[package]
name = "mayaisland_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.1"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid", "macros", "uuid"]}
sqlx-mysql = "0.7.3"
tokio = "1.35.1"
uuid = "1.6.1"
